@@ -18,6 +18,7 @@
 #include <Champ_Fonc_Tabule.h>
 #include <Champ_Fonc_t.h>
 #include <Champ_Front_Fonction.h>
+#include <Champ_Front_xyz_Tabule.h>
 #include <Champ_Generique_Champ.h>
 #include <Champ_Generique_Correlation.h>
 #include <Champ_Generique_Divergence.h>
@@ -78,45 +79,46 @@ Champ_Fonc_Morceaux inst14;verifie_pere(inst14);
 Champ_Fonc_Tabule inst15;verifie_pere(inst15);
 Champ_Fonc_t inst16;verifie_pere(inst16);
 Champ_Front_Fonction inst17;verifie_pere(inst17);
-Champ_Generique_Champ inst18;verifie_pere(inst18);
-Champ_Generique_Correlation inst19;verifie_pere(inst19);
-Champ_Generique_Divergence inst20;verifie_pere(inst20);
-Champ_Generique_Ecart_Type inst21;verifie_pere(inst21);
-Champ_Generique_Extraction inst22;verifie_pere(inst22);
-Champ_Generique_Gradient inst23;verifie_pere(inst23);
-Champ_Generique_Interpolation inst24;verifie_pere(inst24);
-Champ_Generique_Morceau_Equation inst25;verifie_pere(inst25);
-Champ_Generique_Moyenne inst26;verifie_pere(inst26);
-Champ_Generique_Predefini inst27;verifie_pere(inst27);
-Champ_Generique_Reduction_0D inst28;verifie_pere(inst28);
-Champ_Generique_Statistiques inst29;verifie_pere(inst29);
-Champ_Generique_Transformation inst30;verifie_pere(inst30);
-Champ_Generique_refChamp inst31;verifie_pere(inst31);
-Champ_Generique_refChamp_special inst32;verifie_pere(inst32);
-Champ_Tabule_Morceaux inst33;verifie_pere(inst33);
-Champ_Tabule_Temps inst34;verifie_pere(inst34);
-Champ_Uniforme inst35;verifie_pere(inst35);
-Champ_Uniforme_Morceaux inst36;verifie_pere(inst36);
-Champ_Uniforme_Morceaux_Tabule_Temps inst37;verifie_pere(inst37);
-Champ_front_Tabule inst38;verifie_pere(inst38);
-Champ_front_bruite inst39;verifie_pere(inst39);
-Champ_front_calc inst40;verifie_pere(inst40);
-Champ_front_calc_interne inst41;verifie_pere(inst41);
-Champ_front_debit inst42;verifie_pere(inst42);
-Champ_front_debit_massique inst43;verifie_pere(inst43);
-Champ_front_fonc inst44;verifie_pere(inst44);
-Champ_front_fonc_gradient inst45;verifie_pere(inst45);
-Champ_front_fonc_pois_ipsn inst46;verifie_pere(inst46);
-Champ_front_fonc_pois_tube inst47;verifie_pere(inst47);
-Champ_front_lu inst48;verifie_pere(inst48);
-Champ_front_normal inst49;verifie_pere(inst49);
-Champ_front_t inst50;verifie_pere(inst50);
-Champ_front_tangentiel inst51;verifie_pere(inst51);
-Champ_front_txyz inst52;verifie_pere(inst52);
-Champ_front_uniforme inst53;verifie_pere(inst53);
-Champ_front_xyz_debit inst54;verifie_pere(inst54);
-Champ_input_P0 inst55;verifie_pere(inst55);
-Init_par_partie inst56;verifie_pere(inst56);
-Tayl_Green inst57;verifie_pere(inst57);
-champ_init_canal_sinal inst58;verifie_pere(inst58);
+Champ_Front_xyz_Tabule inst18;verifie_pere(inst18);
+Champ_Generique_Champ inst19;verifie_pere(inst19);
+Champ_Generique_Correlation inst20;verifie_pere(inst20);
+Champ_Generique_Divergence inst21;verifie_pere(inst21);
+Champ_Generique_Ecart_Type inst22;verifie_pere(inst22);
+Champ_Generique_Extraction inst23;verifie_pere(inst23);
+Champ_Generique_Gradient inst24;verifie_pere(inst24);
+Champ_Generique_Interpolation inst25;verifie_pere(inst25);
+Champ_Generique_Morceau_Equation inst26;verifie_pere(inst26);
+Champ_Generique_Moyenne inst27;verifie_pere(inst27);
+Champ_Generique_Predefini inst28;verifie_pere(inst28);
+Champ_Generique_Reduction_0D inst29;verifie_pere(inst29);
+Champ_Generique_Statistiques inst30;verifie_pere(inst30);
+Champ_Generique_Transformation inst31;verifie_pere(inst31);
+Champ_Generique_refChamp inst32;verifie_pere(inst32);
+Champ_Generique_refChamp_special inst33;verifie_pere(inst33);
+Champ_Tabule_Morceaux inst34;verifie_pere(inst34);
+Champ_Tabule_Temps inst35;verifie_pere(inst35);
+Champ_Uniforme inst36;verifie_pere(inst36);
+Champ_Uniforme_Morceaux inst37;verifie_pere(inst37);
+Champ_Uniforme_Morceaux_Tabule_Temps inst38;verifie_pere(inst38);
+Champ_front_Tabule inst39;verifie_pere(inst39);
+Champ_front_bruite inst40;verifie_pere(inst40);
+Champ_front_calc inst41;verifie_pere(inst41);
+Champ_front_calc_interne inst42;verifie_pere(inst42);
+Champ_front_debit inst43;verifie_pere(inst43);
+Champ_front_debit_massique inst44;verifie_pere(inst44);
+Champ_front_fonc inst45;verifie_pere(inst45);
+Champ_front_fonc_gradient inst46;verifie_pere(inst46);
+Champ_front_fonc_pois_ipsn inst47;verifie_pere(inst47);
+Champ_front_fonc_pois_tube inst48;verifie_pere(inst48);
+Champ_front_lu inst49;verifie_pere(inst49);
+Champ_front_normal inst50;verifie_pere(inst50);
+Champ_front_t inst51;verifie_pere(inst51);
+Champ_front_tangentiel inst52;verifie_pere(inst52);
+Champ_front_txyz inst53;verifie_pere(inst53);
+Champ_front_uniforme inst54;verifie_pere(inst54);
+Champ_front_xyz_debit inst55;verifie_pere(inst55);
+Champ_input_P0 inst56;verifie_pere(inst56);
+Init_par_partie inst57;verifie_pere(inst57);
+Tayl_Green inst58;verifie_pere(inst58);
+champ_init_canal_sinal inst59;verifie_pere(inst59);
 }
