@@ -1,0 +1,147 @@
+# Thermohydraulique 2D : Conditions limites instationnaires #
+# PARALLEL OK 2 #
+dimension 2
+Pb_Thermohydraulique pb
+Domaine dom
+# BEGIN MESH #
+Mailler dom
+{
+	Pave Cavite 
+		{
+		Origine 0. 0.
+     		Nombre_de_Noeuds 11 11
+		Longueurs 0.01 0.01
+		}
+		{
+		Bord Gauche X = 0.  0. <= Y <= 0.01
+		Bord Haut1 Y = 0.01  0. <= X <= 0.005
+		Bord Haut2 Y = 0.01  0.005 <= X <= 0.010
+		Bord Bas Y = 0.     0. <= X <= 0.01
+		Bord Droit X = 0.01 0. <= Y <= 0.01
+		}
+}
+
+# END MESH #
+# BEGIN PARTITION
+Partition dom
+{
+	Partition_tool tranche { tranches 2 1 }
+	Larg_joint 2
+	zones_name DOM
+}
+End
+END PARTITION #
+
+# BEGIN SCATTER
+Scatter DOM.Zones dom
+END SCATTER #
+
+VDF dis
+
+Scheme_euler_explicit sch
+Read sch
+{
+	tinit 0.
+	tmax 2.0 
+	dt_min 0.001
+	dt_max 0.01
+	dt_impr 0.001
+	dt_sauv 100
+	seuil_statio 1.e-8
+}
+
+Fluide_Incompressible fluide
+Read fluide
+{
+	mu Champ_Uniforme 1 1.85e-5
+	rho Champ_Uniforme 1 1.17
+	lambda Champ_Uniforme 1 0.0262 
+	Cp Champ_Uniforme 1 1006
+	beta_th Champ_Uniforme 1 3.41e-3
+}
+
+Champ_Uniforme gravite
+Read gravite 2 0 -9.81
+
+Associate fluide gravite
+Associate pb dom
+Associate pb sch
+Associate pb fluide
+
+Discretize pb dis
+
+Read pb
+{
+	Navier_Stokes_standard
+	{
+		solveur_pression GCP { 
+			precond ssor { omega 1.500000 } 
+			seuil 1e-16 
+			impr 
+		}
+		convection { Quick }
+		diffusion { }
+		sources { boussinesq_temperature { T0 5. } }
+		initial_conditions {
+			vitesse Champ_Uniforme 2 0. 0.
+			}
+		boundary_conditions {
+			Haut1 frontiere_ouverte_vitesse_imposee
+				Champ_front_bruite 2 {
+					Moyenne 0. -0.01
+					Amplitude 0. 0. }
+			Haut2 frontiere_ouverte_vitesse_imposee
+				Champ_front_tabule 2
+				{ 8 0. 0.5 0.6 0.7 1.2 1.3 1.4 1.5
+				0. 0. 0. 0. 0. 0.01 0. 0.03 0. 0.03 0. 0.02 0. 0. 0. 0. }
+			Bas frontiere_ouverte_pression_imposee
+				Champ_front_Uniforme 1 0.
+			Gauche paroi_fixe
+			Droit paroi_fixe
+		}
+	}
+	Convection_Diffusion_Temperature
+	{
+		diffusion { }
+		convection { quick }
+		boundary_conditions 
+		{
+			Haut1 frontiere_ouverte_temperature_imposee
+				Champ_front_Uniforme 1 5.
+			Haut2 frontiere_ouverte_temperature_imposee
+				Champ_front_Uniforme 1 5.
+			Bas frontiere_ouverte T_ext
+				Champ_front_Uniforme 1 5.
+ 			Gauche paroi_temperature_imposee 
+				 Champ_Front_xyz_Tabule 1 10*(x+0.5)/(x+0.5) 
+				{ 6 0. 0.1 0.101 1.5 1.501 2.5
+				    0. 0. 1. 1. 0. 0. } 
+			Droit  paroi_temperature_imposee 
+				 Champ_Front_Uniforme 1  0.
+		}
+		initial_conditions { Temperature Champ_Uniforme 1 5. }
+	}
+
+	Post_processing
+	{
+		Probes
+		{
+			sonde_pression pression periode 0.01 points 1 0.0045 0.0045
+			sonde_vitesse vitesse periode 0.01 points 2 0.0005 0.01 0.0055 0.01
+			sonde_temp temperature periode 0.01 points 2 0.0005 0.0005 0.0095 0.0005
+		}
+		fields dt_post 0.1
+		{
+			pression elem
+			pression som
+			vitesse elem
+			vitesse som
+			temperature elem
+			temperature som
+		}
+	}
+}
+
+Solve pb
+End
+End
